# school.paolo565.org

./: .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  build.sh  index.html  manifest.json  nginx.conf  package-lock.json  package.json  service-worker.js  test.html
.github/workflows/: CI.yml
assets/: app.css  app.js  pages.js  utils.js
assets/css/: app.css
assets/js/: app.js  istitutogobetti.js  pages.js  utils.js
frontend/: manifest.json  service-worker.js
frontend/static/: app.css  app.js  app.print.css
public/: service-worker.js
public/static/: app.css  app.js
src/: App.vue  article.rs  articles.rs  cache.rs  db.js  error.rs  hour.rs  hours.rs  index.js  index.scss  istitutogobetti.js  macros.rs  main.rs  service-worker.js  utils.js  web.js  web.rs
src/components/: ArticleColumns.vue  BottomNavigation.vue  ColumnItem.vue  LastUpdate.vue  Loading.vue  Offline.vue  Pdf.vue  PdfPage.vue  ScheduleColumn.vue  ScheduleColumns.vue  ScheduleItem.vue  TopHeading.vue  TopNavigation.vue  TopSection.vue
src/pages/: About.vue  Article.vue  Articles.vue  Schedule.vue  Schedules.vue
src/router/: index.js
static/: manifest.json
templates/: 404.html  500.html  about.html  article.html  articles.html  base.html  hour.html  index.html  navigation_print.html  navigation_search.html  offline.html
views/: 404.hbs  500.hbs  about.hbs  article.hbs  articles.hbs  hour.hbs  index.hbs  offline.hbs
views/partials/: article_item.hbs  footer.hbs  header.hbs  top_navigation.hbs
