[package]
name = "school_paolo565_org"
version = "2.0.0"
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/paolobarbolini/school.paolo565.org"

[dependencies]
tokio = { version = "0.2.11", features = ["macros", "sync", "rt-core", "rt-threaded"] }

warp = { version = "0.2.1", default-features = false }
# TODO: replace with a crates.io release once askama_warp is published
askama = { git = "https://github.com/djc/askama.git" }
askama_warp = { git = "https://github.com/djc/askama.git" }
rust-embed = "5.3.0"
mime_guess = "2.0.1"

reqwest = "0.10.1"
unhtml = { version = "0.7.5", features = ["derive"] }

url = "2.1.1"

ttl_cache = "0.5.1"
lazy_static = "1.4.0"
