[package]
name = "school_paolo565_org"
version = "2.0.0"
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/paolobarbolini/school.paolo565.org"

[dependencies]
tokio = { version = "0.2.13", features = ["macros", "sync", "rt-core", "rt-threaded"] }

warp = { version = "0.2.2", default-features = false }
# TODO: replace with a crates.io release once askama_warp is published
askama = { git = "https://github.com/djc/askama.git", rev = "c43b12e6" }
askama_warp = { git = "https://github.com/djc/askama.git", rev = "c43b12e6" }
rust-embed = "5.5.0"
mime_guess = "2.0.3"

reqwest = "0.10.4"
unhtml = { version = "0.7.5", features = ["derive"] }

url = "2.1.1"

ttl_cache = "0.5.1"
lazy_static = "1.4.0"

[patch.crates-io]
scraper = { git = "https://github.com/causal-agent/scraper.git", rev = "e3f6572" }
