[package]
name = "school_paolo565_org"
version = "2.0.0"
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
edition = "2018"
license = "AGPL-3.0-only"
repository = "https://github.com/paolobarbolini/school.paolo565.org"
publish = false

[dependencies]
# async
tokio = { version = "0.2.22", features = ["macros", "sync", "rt-core", "rt-threaded"] }

# web
warp = { version = "0.2.5", default-features = false }
askama = "0.10.3"
askama_warp = "0.10.0"
rust-embed = "5.6.0"
mime_guess = "2.0.3"

# scraper
reqwest = "0.10.8"
# we don't really need to import this from git, it's just to reduce the number of duplicate dependencies
unhtml = { git = "https://github.com/Hexilee/unhtml.rs.git", version = "0.7.5", features = ["derive"] }
bytes = "0.5.6"
url = "2.1.1"

# cache
lru_time_cache = "0.11.2"
lazy_static = "1.4.0"
